# Minimal Python project configuration for linters and type checkers.
# This file centralizes config for ruff and pyright.

[project]
name = "aperisolve"
version = "3.2.0"
description = "Open-source steganalysis web platform for automated image analysis and steganography detection"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Zeecka"}
]
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "numpy",
    "redis",
    "rq",
    "psycopg2-binary",
    "Pillow",
    "gunicorn",
    "sentry-sdk[flask,sqlalchemy,rq]"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "types-Flask-SQLAlchemy",
    "sqlalchemy-stubs"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.pyright]
include = ["aperisolve"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
