# Minimal Python project configuration for linters and type checkers.
# This file centralizes config for ruff and ty.

[project]
name = "aperisolve"
version = "3.3.2"
description = "Open-source steganalysis web platform for automated image analysis and steganography detection"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Zeecka"}
]
dependencies = [
    "Flask>=3.1",
    "Flask-SQLAlchemy>=3.1",
    "numpy",
    "redis",
    "rq",
    "psycopg2-binary",
    "Pillow>=11",
    "gunicorn",
    "sentry-sdk[flask,sqlalchemy,rq]",
    "Markdown",
    "Pygments",
    "flask-babel",
    "Flask-Limiter[redis]"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "requests",
    # ty consumes these stubs for the flask-sqlalchemy/sqlalchemy dynamic
    # bases; removing them surfaces invalid-argument-type errors.
    "types-Flask-SQLAlchemy",
    "sqlalchemy-stubs"
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

# Only package the application; other top-level dirs (docker/, tests/) must
# not confuse setuptools' flat-layout auto-discovery.
[tool.setuptools.packages.find]
include = ["aperisolve*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Tests use asserts, magic values and env setup before imports by design.
"tests/*" = ["S101", "INP001", "PLR2004", "E402"]
# Dev-only generator scripts: print output, layout magic numbers, and lighter
# annotation/docstring requirements are fine for standalone tooling.
"scripts/*" = ["T201", "INP001", "PLR2004", "PLR0913", "ANN", "D", "COM812"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["aperisolve"]
